[java-inspections] IDEA-300969 Identical branches inspection: handle continue
PR#2131

GitOrigin-RevId: adde184e92319942b614256d5190e2311e7fbd9a